--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,12 @@
 {
-  "builds": [{
-      "src": "DBC_Desplegable/wsgi.py",
-      "use": "@vercel/python",
-      "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
-  }],
-  "routes": [
-      {
-          "src": "/(.*)",
-          "dest": "DBC_Desplegable/wsgi.py"
-      }
-  ]
-}
+    "version": 2,
+    "builds": [
+      { "src": "dbc/wsgi.py", "use": "@vercel/python" },
+      { "src": "build_files.sh", "use": "@vercel/static-build", "config": { "distDir": "staticfiles" } }
+    ],
+    "routes": [
+      { "src": "/static/(.*)", "dest": "/static/$1" },
+      { "src": "/(.*)", "dest": "dbc/wsgi.py" }
+    ]
+  }
   
