--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "version": 2,
     "builds": [
       { "src": "dbc/wsgi.py", "use": "@vercel/python" },
-      { "src": "build_files.sh", "use": "@vercel/static-build", "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" } }
+      { "src": "build_files.sh", "use": "@vercel/python", "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" } }
     ],
     "routes": [
       { "src": "/static/(.*)", "dest": "/static/$1" },
