--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,13 @@
 {
-    "version": 2,
-    "builds": [
-      { "src": "dbc/wsgi.py", "use": "@vercel/python" },
-      { "src": "build_files.sh", "use": "@vercel/python", "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" } }
-    ],
+    "builds": [{
+        "src": "dbc/wsgi.py",
+        "use": "@vercel/python",
+        "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
+    }],
     "routes": [
-      { "src": "/static/(.*)", "dest": "/static/$1" },
-      { "src": "/(.*)", "dest": "dbc/wsgi.py" }
+        {
+            "src": "/(.*)",
+            "dest": "dbc/wsgi.py"
+        }
     ]
   }
